--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,10 @@ section h2{
   margin: 4em 0 1em;
   text-align: center;
 }
+
+a{
+  color: #f96e90;
+  text-decoration: none;
+  border-bottom: 3px dotted #f96e90;
+  font-weight: bold;
+}
