--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,3 +42,26 @@ a{
 .topimg{
   margin: 12vw;
 }
+
+.navigation{
+  box-shadow:0px 3px 14px 0px rgba(133, 133, 133, 0.28);
+  border-radius: 50px;
+  padding: 20px 36px;
+  margin: 12px 2vw;
+}
+.navigation ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.navigation li{
+  display: inline;
+  padding-right: 12px;
+}
+.navigation a{
+  border: none;
+  color: #555;
+}
+.navigation a:hover{
+  color: #f96e90;
+}
