--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ a{
   box-shadow:0px 3px 14px 0px rgba(133, 133, 133, 0.28);
   border-radius: 50px;
   padding: 20px 36px;
-  margin: 12px 2vw;
+  margin: 12px 12vw;
 }
 .navigation ul{
   list-style: none;
@@ -55,7 +55,7 @@ a{
   margin: 0;
 }
 .navigation li{
-  display: inline;
+  display: inline-block;
   padding-right: 12px;
 }
 .navigation a{
